<resources>
    <string name="app_name">Space Warfare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_home">Home</string>
    <string name="action_resources">Resources</string>
    <string name="action_buildings">Buildings</string>
    <string name="action_research">Research</string>
    <string name="action_ships">Ships</string>
    <string name="action_defense">Defense</string>
    <string name="action_attack">Attack</string>
    <string name="action_outerspace">Outerspace</string>
    <string name="action_conquers">Conquers</string>
    <string name="action_ranking">Ranking</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="action_register">Register</string>

    <string name="action_settings">Settings</string>
    <string name="string_home">Home</string>
    <string name="string_resources">Resources</string>
    <string name="string_buildings">Facilities</string>
    <string name="string_research">Research</string>
    <string name="string_ships">SpaceCraft</string>
    <string name="string_defense">Defense</string>
    <string name="string_attack">Attack</string>
    <string name="string_outerspace">Outerspace</string>
    <string name="string_conquers">Conquers</string>
    <string name="string_ranking">Ranking</string>


    <!-- Objects keys -->

    <string name="key_Resource_Jeremejevite" translatable="false"> key_Resource_Jeremejevite </string>
    <string name="key_Resource_FireOpal" translatable="false"> key_Resource_FireOpal </string>
    <string name="key_Resource_Poudretteite" translatable="false"> key_Resource_Poudretteite </string>
    <string name="key_Resource_Benitoite" translatable="false"> key_Resource_Benitoite </string>
    <string name="key_Resource_Musgravite" translatable="false"> key_Resource_Musgravite </string>
    <string name="key_Resource_RedBeryl" translatable="false"> key_Resource_RedBeryl </string>
    <string name="key_Resource_Alexandrite" translatable="false"> key_Resource_Alexandrite </string>
    <string name="key_Resource_Diamond" translatable="false"> key_Resource_Diamond </string>
    <string name="key_Resource_Serendibite" translatable="false"> key_Resource_Serendibite </string>
    <string name="key_Resource_Grandidierite" translatable="false"> key_Resource_Grandidierite </string>
    <string name="key_Resource_Taaffeite" translatable="false"> key_Resource_Taaffeite </string>
    <string name="key_Resource_RedDiamond" translatable="false"> key_Resource_RedDiamond </string>

    <string name="key_Building_Hangar" translatable="false"> key_Building_hangar </string>
    <string name="key_Building_ResearchLab" translatable="false"> key_Building_ResearchLab </string>
    <string name="key_Building_NaniteFactory" translatable="false"> key_Building_NaniteFactory </string>
    <string name="key_Building_RobotFactory" translatable="false"> key_Building_RobotFactory </string>
    <string name="key_Building_TimeMachine" translatable="false"> key_Building_TimeMachine </string>

    <string name="key_Building_MineIron" translatable="false"> key_Building_MineIron </string>
    <string name="key_Building_MineBronze" translatable="false"> key_Building_MineBronze </string>
    <string name="key_Building_MineSilver" translatable="false"> key_Building_MineSilver </string>
    <string name="key_Building_MineGold" translatable="false"> key_Building_MineGold </string>
    <string name="key_Building_MinePlatinum" translatable="false"> key_Building_MinePlatinum </string>
    <string name="key_Building_MineRhodium" translatable="false"> key_Building_MineRhodium </string>
    <string name="key_Building_MinePlutonium" translatable="false"> key_Building_MinePlutonium </string>
    <string name="key_Building_MineDiamond" translatable="false"> key_Building_MineDiamond </string>
    <string name="key_Building_MinePainite" translatable="false"> key_Building_MinePainite </string>
    <string name="key_Building_MineBenitoite" translatable="false"> key_Building_MineBenitoite </string>
    <string name="key_Building_MineDeuterium" translatable="false"> key_Building_MineDeuterium </string>

    <string name="key_Research_AsteroidPhysics" translatable="false"> key_Research_AsteroidPhysics </string>
    <string name="key_Research_BenitoiteAttracters" translatable="false"> key_Research_BenitoiteAttracters </string>
    <string name="key_Research_BenitoiteGatheringSpeed" translatable="false"> key_Research_BenitoiteGatheringSpeed </string>
    <string name="key_Research_CombustionMotors" translatable="false"> key_Research_CombustionMotors </string>
    <string name="key_Research_DarkMatterTech" translatable="false"> key_Research_DarkMatterTech </string>
    <string name="key_Research_DeuteriumGatheringSpeed" translatable="false"> key_Research_DeuteriumGatheringSpeed </string>
    <string name="key_Research_IronGatheringSpeed" translatable="false"> key_Research_IronGatheringSpeed </string>
    <string name="key_Research_IronMiner" translatable="false"> key_Research_IronMiner </string>
    <string name="key_Research_PlasmaTech" translatable="false"> key_Research_PlasmaTech </string>
    <string name="key_Research_PropulsionMotors" translatable="false"> key_Research_PropulsionMotors </string>
    <string name="key_Research_SilverGatheringRobot" translatable="false"> key_Research_SilverGatheringRobot </string>
    <string name="key_Research_SuperSonicMotor" translatable="false"> key_Research_SuperSonicMotors </string>
    <string name="key_Research_WeaponTech" translatable="false"> key_Research_WeaponTech </string>

    <string name="key_Ship_Messier" translatable="false"> key_Ship_Messier </string>
    <string name="key_Ship_Mayalls" translatable="false"> key_Ship_Mayalls </string>
    <string name="key_Ship_Spyer" translatable="false"> key_Ship_Spyer </string>
    <string name="key_Ship_Leviathan" translatable="false"> key_Ship_Leviathan </string>
    <string name="key_Ship_BattlestarPegasus" translatable="false"> key_Ship_BattlestarPegasus </string>
    <string name="key_Ship_CylonBasestar" translatable="false"> key_Ship_CylonBasestar </string>
    <string name="key_Ship_GiantMayalls" translatable="false"> key_Ship_GiantMayalls </string>
    <string name="key_Ship_Colonizer" translatable="false"> key_Ship_Colonizer </string>
    <string name="key_Ship_Deathstar" translatable="false"> key_Ship_Deathstar </string>

    <string name="key_Defense_MissileLauncher" translatable="false"> key_Defense_MissileLauncher </string>
    <string name="key_Defense_ResourceBunker" translatable="false"> key_Defense_ResourceBunker </string>
    <string name="key_Defense_PlasmaCannon" translatable="false"> key_Defense_PlasmaCannon </string>
    <string name="key_Defense_AntiAirRobot" translatable="false"> key_Defense_AntiAirRobot </string>
    <string name="key_Defense_HeavyLaser" translatable="false"> key_Defense_HeavyLaser </string>
    <string name="key_Defense_IonCannon" translatable="false"> key_Defense_IonCannon </string>
    <string name="key_Defense_planetShield" translatable="false"> key_Defense_planetShield </string>
    <string name="key_Defense_AsteroidManipulator" translatable="false"> key_Defense_AsteroidManipulator </string>
    <string name="key_Defense_DarkMatterBeam" translatable="false"> key_Defense_DarkMatterBeam </string>


    <string name="key_Building_Hangar2" translatable="false"> key_Building_hangar2 </string>
    <string name="key_Building_Hangar3" translatable="false"> key_Building_hangar3 </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name_string">Company Name</string>
</resources>
