<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/string_home" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/icon_resources"
            android:title="@string/string_resources" />
        <item
            android:id="@+id/nav_buildings"
            android:icon="@drawable/icon_buildings"
            android:title="@string/string_buildings" />
        <item
            android:id="@+id/nav_research"
            android:icon="@drawable/icon_research"
            android:title="@string/string_research" />
        <item
            android:id="@+id/nav_ships"
            android:icon="@drawable/icon_ships"
            android:title="@string/string_ships" />
        <item
            android:id="@+id/nav_defense"
            android:icon="@drawable/icon_defense"
            android:title="@string/string_defense" />
        <item
            android:id="@+id/nav_attack"
            android:icon="@drawable/icon_attack"
            android:title="@string/string_attack" />
        <item
            android:id="@+id/nav_outerspace"
            android:icon="@drawable/icon_outerspace"
            android:title="@string/string_outerspace" />
        <item
            android:id="@+id/nav_conquers"
            android:icon="@drawable/icon_conquers"
            android:title="@string/string_conquers" />
        <item
            android:id="@+id/nav_rankings"
            android:icon="@drawable/icon_rankings"
            android:title="@string/string_ranking" />

</menu>
